<resources>
    <string name="app_name">Guess It</string>
    <string name="start_a_new_game">Start a new game</string>
    <string name="join_a_game">Join a game</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start">Start</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join">Join</string>
    <string name="enter_code_og_the_game">Enter code of the game</string>
    <string name="logo">Logo</string>
    <string name="end_game">End game</string>
    <string name="skip">Skip</string>
    <string name="the_word_is">The word is</string>
    <string name="correct">Correct</string>
    <string name="create_a_game">Create a game</string>
    <string name="waiting_for_your_opponent">Waiting for your opponent</string>
</resources>